CI: make_release: also ship stable bpfs
Without this, the CI fails as 10-HP__Elite-Presenter.bpf.c is now in
stable, and we weren't sjipping it anymore.

But it makes sense to overwrite the system ones in case a manual install
is done, so let's provide everything.

Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -383,8 +383,7 @@ make release:
     - pip install yq
     - ln -s /usr/bin/true /usr/local/bin/udevadm
     - ln -s /usr/bin/true /usr/local/bin/systemd-hwdb
-    # this is the default anyway but let's be explicit here
-    - ./make_release.sh --verbose --features testing
+    - ./make_release.sh --verbose --features testing,stable
     - mkdir -p tarball_dir
     - tar xf udev-hid-bpf*.tar.xz -C tarball_dir --strip-components=1
     - pushd tarball_dir
