--- a/src/bpf/testing/meson.build
+++ b/src/bpf/testing/meson.build
@@ -6,6 +6,7 @@
 tracing_sources = [
     '10-Huion__Dial-2.bpf.c',
     '10-Huion__Inspiroy-2-S.bpf.c',
+    '10-Thrustmaster__TCA-Yoke-Boeing.bpf.c',
     '10-XPPen__DecoMini4.bpf.c',
 ]
 
