--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "udev-hid-bpf"
 version = "1.0.1-20240515"  # Update meson.build too!
 edition = "2021"
 license = "GPL-2.0-only"
+rust-version = "1.70"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
