--- a/src/bpf/testing/meson.build
+++ b/src/bpf/testing/meson.build
@@ -1,5 +1,6 @@
 sources = [
-    '10-Huion__Inspiroy-2-S.bpf.c'
+    '10-Huion__Inspiroy-2-S.bpf.c',
+    '10-XPPen__DecoMini4.bpf.c',
 ]
 
 foreach bpf: sources
