test: add a pytest wrapper for our BPF programs
This allows us to write fairly simple tests for our functionality.

Approach:
- recompile each bpf.c into a libtest-foo.so
- provide a ctypes wrapper and some accessors around that .so file
- write tests to verify the bpf does the right thing given some data
- run pytest
- ???
- profit

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,9 +45,10 @@ variables:
     python3-click
     python3-rich
     python3-pyudev
+    python3-pytest
     libevdev
     systemd-udev
-  FEDORA_TAG:  '2024-06-12.2'
+  FEDORA_TAG:  '2024-06-14.0'
   FDO_DISTRIBUTION_EXEC: 'pip3 install --break-system-packages git+https://gitlab.freedesktop.org/libevdev/hid-tools/'
   RUST_BACKTRACE: '1'
   PREFIX: /_inst
@@ -75,6 +76,7 @@ variables:
     perl-Term-ANSIColor
     perl-Encode
     jq
+  MESON_OPTIONS: -Dtests=enabled
 
 .policy:
   retry:
