CI: fix make_release for fedora 37
There is a fix not available in fedora 37 to allow compiling bpf.c files
under gcc.

Manually monkey patch it here.

Given that the tree is not clean anymore, the `--dirty` suffix should be
appended to the archive, but given that we know what we are doing, we
don't do that.

Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -379,12 +379,14 @@ make release:
     - .fedora-cargo@template
   stage: deploy
   script:
+    # Fedora 37 can't properly use _Pragma under GCC
+    - git apply .gitlab-ci/fedora-37.patch
     - python3 -m venv _venv
     - . _venv/bin/activate
     - pip install yq
     - ln -s /usr/bin/true /usr/local/bin/udevadm
     - ln -s /usr/bin/true /usr/local/bin/systemd-hwdb
-    - ./make_release.sh --verbose --features testing,stable
+    - ./make_release.sh --verbose --features testing,stable --yes-I-really-do-not-want-dirty-suffix
     - mkdir -p tarball_dir
     - tar xf udev-hid-bpf*.tar.xz -C tarball_dir --strip-components=1
     - pushd tarball_dir
