meson: gate building tracing bpf by an option
This allows to build HID-BPF which can support tracing with compatible
kernels. We always build the struct_ops version because there are
situations where you know you don't need one or the other (because the
kernel is unknown).

Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -282,21 +282,25 @@ meson filter build:
     - |
       if [ "$FILTER" = "trace" ]; then
         # We only expect one file to be installed
-        test $(ls $PREFIX/lib/firmware/hid/bpf/ | wc -l) -eq 1
+        test $(ls $PREFIX/lib/firmware/hid/bpf/ | wc -l) -eq 2
         test -e $PREFIX/lib/firmware/hid/bpf/10-trace_hid_events.bpf.o
+        test -e $PREFIX/lib/firmware/hid/bpf/09-trace_hid_events.bpf.o
       fi
     - |
       if [ "$FILTER" = "XBox" ]; then
         # We only expect one file to be installed
-        test $(ls $PREFIX/lib/firmware/hid/bpf/ | wc -l) -eq 1
+        test $(ls $PREFIX/lib/firmware/hid/bpf/ | wc -l) -eq 2
         test -e $PREFIX/lib/firmware/hid/bpf/10-Microsoft__XBox-Elite-2.bpf.o
+        test -e $PREFIX/lib/firmware/hid/bpf/09-Microsoft__XBox-Elite-2.bpf.o
       fi
     - |
       if [ "$FILTER" = "trace,XBox" ]; then
         # We only expect two files to be installed
-        test $(ls $PREFIX/lib/firmware/hid/bpf/ | wc -l) -eq 2
+        test $(ls $PREFIX/lib/firmware/hid/bpf/ | wc -l) -eq 4
         test -e $PREFIX/lib/firmware/hid/bpf/10-trace_hid_events.bpf.o
+        test -e $PREFIX/lib/firmware/hid/bpf/09-trace_hid_events.bpf.o
         test -e $PREFIX/lib/firmware/hid/bpf/10-Microsoft__XBox-Elite-2.bpf.o
+        test -e $PREFIX/lib/firmware/hid/bpf/09-Microsoft__XBox-Elite-2.bpf.o
       fi
   variables:
     MESON_ARGS: --prefix=$PREFIX -Dudevdir=$PREFIX/lib/udev
