--- a/src/bpf/stable/meson.build
+++ b/src/bpf/stable/meson.build
@@ -1,4 +1,9 @@
-sources = [
+# tracing_sources are compatible with kernel v6.3+
+#
+# These files do not require features only available
+# in the newer struct_ops approach and are thus compatible
+# for both approaches.
+tracing_sources = [
     '10-FR-TEC__Raptor-Mach-2.bpf.c',
     '10-HP__Elite-Presenter.bpf.c',
     '10-Huion__Kamvas-Pro-19.bpf.c',
@@ -9,12 +14,39 @@ sources = [
     '10-XPPen__ArtistPro16Gen2.bpf.c',
 ]
 
+# 'sources' are BPF programs only compatible with
+# struct_ops (kernel v6.11+)
+sources = [
+]
+
+foreach bpf: tracing_sources
+    bpf_sources += [
+        {
+            'name': bpf,
+            'file': files(bpf)[0],
+            'install': install_stable,
+            'compile_with_tracing': false,
+        },
+    ]
+    if use_bpf_tracing
+        bpf_sources += [
+            {
+                'name': bpf,
+                'file': files(bpf)[0],
+                'install': install_stable,
+                'compile_with_tracing': true,
+            },
+        ]
+    endif
+endforeach
+
 foreach bpf: sources
     bpf_sources += [
         {
             'name': bpf,
             'file': files(bpf)[0],
             'install': install_stable,
+            'compile_with_tracing': false,
         },
     ]
 endforeach
